--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carregando...</title>
+    <title>Redirecionando...</title>
+    <meta http-equiv="refresh" content="0; url=https://go.hotmart.com/Y97273047Y">
     <!-- Otimização de CSS: Minificar e carregar o mais importante primeiro -->
     <link rel="stylesheet" href="styles.css">
     <!-- Prefira imagens em WebP quando possível -->
